--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,12 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  go_transitions: ^0.7.1
+  flutter_bloc: ^9.0.0
+  google_fonts: ^6.2.1
+  get_it: ^8.0.3
+  flutter_secure_storage: ^9.2.4
+  go_router: ^14.8.0
   flutter:
     sdk: flutter
 
