--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   get_it: ^8.0.3
   flutter_secure_storage: ^9.2.4
   go_router: ^14.8.0
+  http: ^1.3.0
+  dartz: ^0.10.1
   flutter:
     sdk: flutter
 
